--- a/css/blog.css
+++ b/css/blog.css
@@ -1,4 +1,4 @@
-        * {
+    * {
         box-sizing: border-box;
     }
     
@@ -67,7 +67,6 @@
     
     .blog-header-content {
         width: 100%;
-        padding: 10px;
         margin-bottom: 25px;
     }
     
@@ -78,20 +77,21 @@
     .main-content-row {
         display: flex;
         flex-flow: row nowrap;
-        justify-content: space-evenly;
+        justify-content: space-between;
+        align-content: center;
         width: 100%;
         height: 250px;
         border-bottom: 1px dashed black;
-        margin: 30px;
+        margin: 30px 0 25px 0;
     }
     
     .main-content-text {
-        width: 48%;
+        width: 50%;
     }
     
     .main-content-img {
-        height: 400px;
-        width: 400px;
+        height: 200px;
+        width: 300px;
     }
     
     .main-content-img img {
@@ -123,3 +123,4 @@
     footer nav a {
         color: white;
         text-decoration: none;
+    }
